 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Fix backdrop blending on lines without sprites (fixes mgba.io/i/1647)
 - GBA Video: Fix OpenGL sprite flag priority
Other fixes:
 - Core: Fix race condition initializing thread proxy
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix integer overflow in ELF loading
 - Qt: Only dynamically reset video scale if a game is running
 - Qt: Fix race condition with proxied video events
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix color selection in asset view (fixes mgba.io/i/1648)
 - Qt: Fix missing OSD messages
 - Qt: Fix crash unloading shaders
 - Qt: Fix toggled actions on gamepads (fixes mgba.io/i/1650)
 - Qt: Fix extraneous dialog (fixes mgba.io/i/1654)
 - Qt: Fix window title not updating after shutting down game
 - Qt: Fix GIF view not allowing manual filename entry
 - Util: Fix crash reading invalid ELFs
Misc:
 - Qt: Renderer can be changed while a game is running
 - Qt: Fix non-SDL build (fixes mgba.io/i/1656)
 - Switch: Make OpenGL scale adjustable while running

0.8.0: (2020-01-21)
Features:
 - Improved logging configuration
 - One-Player BattleChip/Progress/Beast Link Gate support
 - Add Game Boy Color palettes for original Game Boy games
 - Debugger: Add unary operators and memory dereferencing
 - GB: Expose platform information to CLI debugger
 - Support Discord Rich Presence
 - Debugger: Add tracing to file
 - Enhanced map viewer, supporting bitmapped GBA modes and more displayed info
 - OpenGL renderer with high-resolution upscaling support
 - Experimental high level "XQ" audio for most GBA games
 - Interframe blending for games that use flicker effects
 - Frame inspector for dissecting and debugging rendering
 - Switch: Option to use built-in brightness sensor for Boktai
 - Ports: Ability to enable or disable all SGB features (closes mgba.io/i/1205)