@@ -18,6 +18,7 @@ Other fixes:
  - Core: Fix race condition initializing thread proxy
  - Core: Ensure ELF regions can be written before trying
  - Core: Fix integer overflow in ELF loading
+ - FFmpeg: Fix crash when -strict -2 is needed for vcodec or container
  - Qt: Only dynamically reset video scale if a game is running
  - Qt: Fix race condition with proxied video events
  - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
